--- a/src/Components/services/Services.css
+++ b/src/Components/services/Services.css
@@ -59,3 +59,31 @@ max-width: 300px;}
     background-image: linear-gradient(45deg, #3f0028, #582300);
 transform: scale(1.05);
 transition: 0.4s ;}
+
+@media(max-width:768px){
+    .services{align-items: start;
+    gap: 70px;
+margin: 20px 50px;}
+
+
+.services-title h1{padding: 0;
+font-size: 50px;}
+
+.services-title img{width: 130px;
+margin-right: -20px;}
+
+.services-format{gap: 20px;
+    padding: 32px;
+}
+.services-format h2{font-size: 25px;}
+
+.services-format p{font-size: 18px;
+line-height: 32px;
+max-width: 200px;}
+
+.services-readnore img{width: 20px;}
+
+.services-container{grid-template-columns: 1fr 1fr;
+gap: 30px;}
+
+}
